src/objects/SunContact__c.object
<CustomObject>
    <description>&quot;Sun Kindergarten&quot; custom contact object</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignedGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssignedGroup</label>
        <referenceTo>SunGroup__c</referenceTo>
        <relationshipLabel>Teacher</relationshipLabel>
        <relationshipName>AssignedGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttendanceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AttendanceGroup</label>
        <referenceTo>SunGroup__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>AttendanceGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Parent</label>
        <referenceTo>SunContact__c</referenceTo>
        <relationshipLabel>Kids</relationshipLabel>
        <relationshipName>PrimaryParents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondaryParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Parent</label>
        <referenceTo>SunContact__c</referenceTo>
        <relationshipLabel>Kids</relationshipLabel>
        <relationshipName>SecondaryParents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SunContact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>AttendanceGroup__c</columns>
        <columns>AssignedGroup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SunContacts</pluralLabel>
    <recordTypes>
        <fullName>Kid</fullName>
        <active>true</active>
        <label>Kid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>